--- a/08.md
+++ b/08.md
@@ -4,7 +4,7 @@
 
 1. Use Bootstrap form styles to recreate this exact same login form:
 
-![Example Image](../../learn/assets/bootstrap08.png?raw=true)
+![Example Image](../../blob/main/learn/assets/bootstrap08.png)
 
 2. The form should have a dark-grey background color.
 
