--- a/07.md
+++ b/07.md
@@ -2,7 +2,7 @@
 
 Anchor, button, alert, Bootstrap helper classes and other Bootstrap elements can have 7 different styles (colors):
 
-![Example Image](../../.learn/assets/1509928954908_13250fe20b6f2ee9e37d18053e1a56fa.png?raw=true)
+![Example Image](../../blob/main/assets/1509928954908_13250fe20b6f2ee9e37d18053e1a56fa.png)
 
 
 It's not only aesthetics, each style is meant to serve a specific purpose in your website depending on the context.
